build: Don't rename error{_at_line} to rpl_error{_at_line} on native Windows.
* gettext-tools/configure.ac (GNULIB_REPLACE_ERROR): Define only on Cygwin and
Android.
* gettext-tools/woe32dll/gettextlib-exports.c: Don't assume that
GNULIB_DEFINED_ERROR implies GNULIB_REPLACE_ERROR.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -299,12 +299,16 @@ if test "$ac_cv_lib_error_at_line" = no; then
 fi
 AC_SUBST([GETTEXTLIB_EXPORTS_FLAGS])
 
-dnl Tell the source files that the error facility is replaced by
-dnl gnulib, to make sure to prepend "rpl_" prefix to the error_*
-dnl symbols.
+dnl Tell the source files that the error facility is overridden by gnulib,
+dnl to make sure to prepend "rpl_" prefix to the error_* symbols.
+dnl This is only necessary on Cygwin and on Android.
 if test "$ac_cv_lib_error_at_line" = no; then
-  AC_DEFINE([GNULIB_REPLACE_ERROR], [1],
-    [Define when the error facility is replaced by gnulib.])
+  case "$host_os" in
+    cygwin* | linux*-android*)
+      AC_DEFINE([GNULIB_REPLACE_ERROR], [1],
+        [Define when the error facility is replaced by gnulib.])
+      ;;
+  esac
 fi
 
 dnl Put some default definitions into config.h.
