Update after gnulib changed.

--- a/.gitignore
+++ b/.gitignore
@@ -333,6 +333,7 @@
 /gettext-tools/libgrep/regex_internal.h
 /gettext-tools/libgrep/regexec.c
 /gettext-tools/libgrep/stdbool.in.h
+/gettext-tools/libgrep/stdckdint.in.h
 /gettext-tools/libgrep/stddef.in.h
 /gettext-tools/libgrep/stdint.in.h
 /gettext-tools/libgrep/stdlib.in.h
@@ -880,6 +881,7 @@ core
 /gettext-tools/libgrep/limits.h
 /gettext-tools/libgrep/locale.h
 /gettext-tools/libgrep/stdbool.h
+/gettext-tools/libgrep/stdckdint.h
 /gettext-tools/libgrep/stddef.h
 /gettext-tools/libgrep/stdint.h
 /gettext-tools/libgrep/stdlib.h
